--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -2,7 +2,7 @@ set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
 
 set(CPACK_PACKAGE_VENDOR YY)
 
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "<Project Description Summary>")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Yet another web server in C++.")
 
 set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
 
