--- a/nginxpp/version.cpp.in
+++ b/nginxpp/version.cpp.in
@@ -4,7 +4,7 @@
 namespace @PROJECT_NAME@ {
 
 std::string_view GetVersion() {
-    return "@psqlxx_VERSION@";
+    return "@nginxpp_VERSION@";
 }
 
 std::string_view GetGitDescribe() {
