--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "3rdParty/cxxopts"]
 	path = 3rdParty/cxxopts
 	url = https://github.com/jarro2783/cxxopts.git
+[submodule "3rdParty/GSL"]
+	path = 3rdParty/GSL
+	url = https://github.com/microsoft/GSL.git
