Server: Use thread
Change-Id: I57572e3ad6e1ff9c608b76dc714e33a1292ee13a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,8 @@ endif ()
 
 # ######################################################################################
 # Dependencies
+find_package(Threads REQUIRED)
+
 add_subdirectory(3rdParty)
 
 # ######################################################################################
