Server: Implement Socket Stream Buffer

--- a/nginxpp/CMakeLists.txt
+++ b/nginxpp/CMakeLists.txt
@@ -10,8 +10,15 @@ add_library(${PROJECT_NAME}::version ALIAS ${PROJECT_NAME}_version)
 set_target_properties(${PROJECT_NAME}_version PROPERTIES POSITION_INDEPENDENT_CODE ON)
 target_compile_options(${PROJECT_NAME}_version PRIVATE ${COMPILER_WARNING_OPTIONS})
 
-add_library(${PROJECT_NAME}_${PROJECT_NAME} args.cpp args.hpp exception.hpp server.cpp
-                                            server.hpp)
+add_library(
+    ${PROJECT_NAME}_${PROJECT_NAME}
+    args.cpp
+    args.hpp
+    exception.hpp
+    message.cpp
+    message.hpp
+    server.cpp
+    server.hpp)
 add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME}_${PROJECT_NAME})
 target_link_libraries(
     ${PROJECT_NAME}_${PROJECT_NAME}
@@ -25,10 +32,13 @@ add_executable(${PROJECT_NAME}::main ALIAS ${PROJECT_NAME}_main)
 target_link_libraries(${PROJECT_NAME}_main PRIVATE ${PROJECT_NAME}::${PROJECT_NAME})
 set_target_properties(${PROJECT_NAME}_main PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
 
-add_test(NAME ${PROJECT_NAME}.main.can_display_help COMMAND ${PROJECT_NAME}_main --help)
-add_test(NAME ${PROJECT_NAME}.main.can_display_version COMMAND ${PROJECT_NAME}_main
-                                                               --version)
-enable_auto_test_command(${PROJECT_NAME}_main ^${PROJECT_NAME}.main)
+if (${PROJECT_NAME}_WANT_TESTS)
+    add_test(NAME ${PROJECT_NAME}.main.can_display_help COMMAND ${PROJECT_NAME}_main
+                                                                --help)
+    add_test(NAME ${PROJECT_NAME}.main.can_display_version COMMAND ${PROJECT_NAME}_main
+                                                                   --version)
+    enable_auto_test_command(${PROJECT_NAME}_main ^${PROJECT_NAME}.main)
+endif ()
 
 discover_gtest_for(server ${PROJECT_NAME}::${PROJECT_NAME})
 
