Message: Make response directory contents clickable

--- a/nginxpp/CMakeLists.txt
+++ b/nginxpp/CMakeLists.txt
@@ -41,9 +41,10 @@ if (${PROJECT_NAME}_WANT_TESTS)
     enable_auto_test_command(${PROJECT_NAME}_main ^${PROJECT_NAME}.main)
 endif ()
 
-discover_gtest_for(server ${PROJECT_NAME}::${PROJECT_NAME})
 discover_gtest_for(message ${PROJECT_NAME}::${PROJECT_NAME})
 discover_gtest_for(path_utils ${PROJECT_NAME}::${PROJECT_NAME})
+discover_gtest_for(server ${PROJECT_NAME}::${PROJECT_NAME})
+discover_gtest_for(string_utils ${PROJECT_NAME}::${PROJECT_NAME})
 
 if (${PROJECT_NAME}_WANT_INSTALLER)
     install(
